# dc_model_ts

./: .env.example  README.md  pyproject.toml
common/: notas.txt
common/data/: EJEMPLO MUESTRA.xlsx  datos_deterioro_cognitivo.xlsx
models/: modelo_logistic_regression_diagnostico.joblib  modelo_random_forest_diagnostico.joblib  modelo_svm_lineal_diagnostico.joblib  modelo_svm_rbf_diagnostico.joblib
notebooks/: dc_eda_v1.ipynb  dc_ia_newPipeline.ipynb  dc_ia_v1.ipynb  dc_ia_v2.ipynb  dc_pipeline_v2.ipynb  dc_red_dim_v1.ipynb
notebooks/eda/: dc_eda_v2.ipynb
notebooks/modeling/: dc_ia_v1.ipynb  dc_ia_v2.ipynb  dc_ia_v3.ipynb
notebooks/pipeline/: dc_pipeline_v2.ipynb
src/: DC_pipeline.ipynb  dc_pipeline_2.ipynb  dc_pipeline_2_original.ipynb  dc_pipeline_v1.ipynb  dc_pipeline_v2.ipynb  etl.py  etl_notebook.py
src/etl/: __init__.py  cleaning.py  config.py  etl.py  features.py  imputation.py  normalization.py  utils.py
src/modeling/: __init__.py  config.py  utils.py
src/notebooks/: dc_eda_v1.ipynb  dc_ia_v1.ipynb  dc_pipeline_v1.ipynb  dc_pipeline_v2.ipynb  dc_pipeline_v3.ipynb
src/pipeline/: cleaning.py  config.py  etl.py  features.py  imputation.py  normalization.py  utils.py
