[project]
name = "dc-model-ts"
version = "0.1.0"
description = ""
authors = [
    {name = "nicolas-gutierrez-mayasoft",email = "126789964+nicolas-gutierrez-mayasoft@users.noreply.github.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy (==1.26.4)",
    "pandas (==2.1.4)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
