[project]
name = "dc-model-ts"
version = "0.1.0"
description = "dc model predictor"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "imblearn>=0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
